--- a/backend/package.json
+++ b/backend/package.json
@@ -9,7 +9,7 @@
     "@types/node": "^17.0.13",
     "@typescript-eslint/eslint-plugin": "^5.10.1",
     "@typescript-eslint/parser": "^5.10.1",
-    "eslint": "7.32.0",
+    "eslint": "^7.32.0",
     "prettier": "^2.5.1",
     "prettier-eslint": "^13.0.0",
     "ts-node-dev": "^1.1.8",
