--- a/backend/package.json
+++ b/backend/package.json
@@ -17,7 +17,7 @@
   },
   "name": "ytcc-backend",
   "version": "1.0.0",
-  "main": "server.ts",
+  "main": "src/server.ts",
   "repository": "https://github.com/DeemoHarlos/ytcc",
   "author": "DeemoHarlos",
   "license": "MIT",
