--- a/spec/api.yaml
+++ b/spec/api.yaml
@@ -13,13 +13,13 @@
 - Info
   - video_id: Video._id
   - track_id: Track._id
-  - author_id: Author._id
+  - user_id: User._id
   - text: string
   - start_time: number # in seconds
   - end_time: number | null # in seconds
   - style: Style | null
 
-- Author
+- User
   - email: string
   - password_hash: string
 
@@ -54,10 +54,10 @@
   - POST /info/
   - PUT /info/:info_id
 
-- /author
-  - GET /author/me
-  - GET /author/:author_id
-  - POST /author/ # create account
-  - GET /author/verify?code={code} # verify e-mail
-  - PUT /author/password # change password
-  - PUT /author/:author_id # change password
+- /user
+  - GET /user/me
+  - GET /user/:user_id
+  - POST /user/ # create account
+  - GET /user/verify?code={code} # verify e-mail
+  - PUT /user/password # change password
+  - PUT /user/:user_id # change password
