--- a/backend/package.json
+++ b/backend/package.json
@@ -1,7 +1,11 @@
 {
   "dependencies": {
+    "body-parser": "^1.19.1",
     "express": "^4.17.2",
-    "mongoose": "^6.1.8"
+    "express-session": "^1.17.2",
+    "mongoose": "^6.1.8",
+    "passport": "^0.5.2",
+    "passport-local-mongoose": "^6.1.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
@@ -14,6 +18,9 @@
     "prettier-eslint": "^13.0.0",
     "ts-node-dev": "^1.1.8",
     "typescript": "^4.5.5"
+  },
+  "scripts": {
+    "dev": "ts-node-dev src/server.ts"
   },
   "name": "ytcc-backend",
   "version": "1.0.0",
