eslint allow underscore

--- a/backend/package.json
+++ b/backend/package.json
@@ -62,7 +62,7 @@
         "warn",
         "always-multiline"
       ],
-      "@typescript-eslint/no-unused-vars": "warn"
+      "@typescript-eslint/no-unused-vars": ["warn", { "argsIgnorePattern": "^_" }]
     }
   },
   "prettier": {
