--- a/spec/api.yaml
+++ b/spec/api.yaml
@@ -25,7 +25,7 @@
 
 # Types
 - Style
-  - size: numebr # px
+  - size: numbr # px
   - position:
     - horizontal: number # in percentage
     - vertical: number # in percentage
