move eslint and prettier config

--- a/backend/package.json
+++ b/backend/package.json
@@ -27,48 +27,5 @@
   "main": "src/server.ts",
   "repository": "https://github.com/DeemoHarlos/ytcc",
   "author": "DeemoHarlos",
-  "license": "MIT",
-  "eslintConfig": {
-    "env": {
-      "node": true,
-      "es2021": true
-    },
-    "extends": [
-      "eslint:recommended",
-      "plugin:@typescript-eslint/recommended"
-    ],
-    "parser": "@typescript-eslint/parser",
-    "parserOptions": {
-      "ecmaVersion": 12,
-      "sourceType": "module"
-    },
-    "plugins": [
-      "@typescript-eslint"
-    ],
-    "rules": {
-      "indent": [
-        "error",
-        2
-      ],
-      "semi": [
-        "warn",
-        "never"
-      ],
-      "quotes": [
-        "warn",
-        "single"
-      ],
-      "comma-dangle": [
-        "warn",
-        "always-multiline"
-      ],
-      "@typescript-eslint/no-unused-vars": ["warn", { "argsIgnorePattern": "^_" }]
-    }
-  },
-  "prettier": {
-    "trailingComma": "es5",
-    "tabWidth": 2,
-    "semi": false,
-    "singleQuote": true
-  }
+  "license": "MIT"
 }
