--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,8 +17,13 @@
     "bootstrap": "^4.6.1",
     "bootstrap-vue": "^2.21.2",
     "core-js": "^3.19.3",
+    "node-sass": "^7.0.1",
     "nuxt": "^2.15.8",
+    "sass-loader": "^12.4.0",
     "vue": "^2.6.14",
+    "vue-class-component": "^7.2.6",
+    "vue-cli-plugin-pug": "^2.0.0",
+    "vue-property-decorator": "^9.1.2",
     "vue-server-renderer": "^2.6.14",
     "vue-template-compiler": "^2.6.14",
     "webpack": "^4.46.0"
