--- a/backend/package.json
+++ b/backend/package.json
@@ -5,22 +5,29 @@
     "express-session": "^1.17.2",
     "mongoose": "^6.1.8",
     "passport": "^0.5.2",
+    "passport-local": "^1.0.0",
     "passport-local-mongoose": "^6.1.0"
   },
   "devDependencies": {
+    "@types/body-parser": "^1.19.2",
     "@types/express": "^4.17.13",
+    "@types/express-session": "^1.17.4",
     "@types/mongoose": "^5.11.97",
     "@types/node": "^17.0.13",
+    "@types/passport": "^1.0.7",
+    "@types/passport-local": "^1.0.34",
+    "@types/passport-local-mongoose": "^6.1.0",
     "@typescript-eslint/eslint-plugin": "^5.10.1",
     "@typescript-eslint/parser": "^5.10.1",
     "eslint": "^7.32.0",
     "prettier": "^2.5.1",
     "prettier-eslint": "^13.0.0",
     "ts-node-dev": "^1.1.8",
+    "tsconfig-paths": "^3.12.0",
     "typescript": "^4.5.5"
   },
   "scripts": {
-    "dev": "ts-node-dev src/server.ts"
+    "dev": "ts-node-dev -r tsconfig-paths/register src/server.ts"
   },
   "name": "ytcc-backend",
   "version": "1.0.0",
