--- a/frontend/.eslintrc.json
+++ b/frontend/.eslintrc.json
@@ -4,17 +4,15 @@
     "browser": true,
     "node": true
   },
-  "extends": [
-    "@nuxtjs/eslint-config-typescript",
-    "plugin:nuxt/recommended",
-    "prettier"
-  ],
+  "extends": ["@nuxtjs/eslint-config-typescript", "plugin:nuxt/recommended", "prettier"],
   "plugins": ["@typescript-eslint"],
   "rules": {
     "indent": ["error", 2],
     "semi": ["warn", "never"],
     "quotes": ["warn", "single"],
     "comma-dangle": ["warn", "always-multiline"],
-    "@typescript-eslint/no-unused-vars": ["warn", { "argsIgnorePattern": "^_" }]
+    "@typescript-eslint/no-unused-vars": ["warn", { "argsIgnorePattern": "^_" }],
+    "arrow-parens": ["warn", "as-needed"],
+    "brace-style": ["warn", { "allowSingleLine": true }]
   }
 }
