--- a/backend/.eslintrc.json
+++ b/backend/.eslintrc.json
@@ -3,7 +3,7 @@
     "node": true,
     "es2021": true
   },
-  "extends": ["prettier"],
+  "extends": ["eslint:recommended", "plugin:@typescript-eslint/recommended", "prettier"],
   "parser": "@typescript-eslint/parser",
   "parserOptions": {
     "ecmaVersion": 12,
