--- a/frontend/package.json
+++ b/frontend/package.json
@@ -34,10 +34,8 @@
     "@nuxt/typescript-build": "^2.1.0",
     "@nuxtjs/eslint-config-typescript": "^8.0.0",
     "@nuxtjs/eslint-module": "^3.0.2",
-    "eslint": "^7.32.0",
-    "eslint-config-prettier": "^8.3.0",
+    "eslint": "^8.8.0",
     "eslint-plugin-nuxt": "^3.1.0",
-    "eslint-plugin-vue": "^8.2.0",
-    "prettier": "^2.5.1"
+    "eslint-plugin-vue": "^8.2.0"
   }
 }
