--- a/backend/.eslintrc.json
+++ b/backend/.eslintrc.json
@@ -11,12 +11,17 @@
   },
   "plugins": ["@typescript-eslint"],
   "rules": {
-    "indent": ["error", 2],
+    "indent": ["off", 2],
     "semi": ["warn", "never"],
     "quotes": ["warn", "single"],
     "comma-dangle": ["warn", "always-multiline"],
     "@typescript-eslint/no-unused-vars": ["warn", { "argsIgnorePattern": "^_" }],
     "arrow-parens": ["warn", "as-needed"],
-    "brace-style": ["warn", "1tbs", { "allowSingleLine": true }]
+    "brace-style": ["warn", "1tbs", { "allowSingleLine": true }],
+    "curly": ["off", "multi"],
+    "multiline-ternary": ["off"],
+    "no-multiple-empty-lines": ["off"],
+    "space-before-function-paren": ["warn", "never"],
+    "object-curly-spacing": ["warn", "always"]
   }
 }
