--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,13 +18,14 @@
     "bootstrap": "^4.6.1",
     "bootstrap-vue": "^2.21.2",
     "core-js": "^3.19.3",
-    "node-sass": "^7.0.1",
+    "node-sass": "^6.0.0",
     "nuxt": "^2.15.8",
-    "sass-loader": "^12.4.0",
+    "sass-loader": "^10.1.1",
     "vue": "^2.6.14",
     "vue-cli-plugin-pug": "^2.0.0",
     "vue-server-renderer": "^2.6.14",
     "vue-template-compiler": "^2.6.14",
+    "vue-youtube": "^1.4.0",
     "webpack": "^4.46.0"
   },
   "devDependencies": {
@@ -33,6 +34,7 @@
     "@nuxt/typescript-build": "^2.1.0",
     "@nuxtjs/eslint-config-typescript": "^8.0.0",
     "@nuxtjs/eslint-module": "^3.0.2",
+    "@types/youtube-player": "^5.5.5",
     "eslint": "^8.8.0",
     "eslint-plugin-nuxt": "^3.1.0",
     "eslint-plugin-vue": "^8.2.0"
