--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -14,7 +14,8 @@
     "baseUrl": ".",
     "paths": {
       "~/*": ["./*"],
-      "@/*": ["./*"]
+      "@/*": ["./*"],
+      "@api/*": ["../api/*"]
     },
     "types": ["@nuxt/types", "@nuxtjs/axios", "@types/node", "./declare"]
   },
