--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -11,6 +11,7 @@
     "noEmit": true,
     "experimentalDecorators": true,
     "forceConsistentCasingInFileNames": false,
+    "noUncheckedIndexedAccess": true,
     "baseUrl": ".",
     "paths": {
       "@/*": ["./*"],
