--- a/backend/package.json
+++ b/backend/package.json
@@ -8,6 +8,7 @@
     "express-session": "^1.17.2",
     "mongoose": "^6.1.8",
     "passport": "^0.5.2",
+    "passport-google-oauth20": "^2.0.0",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^6.1.0"
   },
@@ -20,6 +21,7 @@
     "@types/mongoose": "^5.11.97",
     "@types/node": "^17.0.13",
     "@types/passport": "^1.0.7",
+    "@types/passport-google-oauth20": "^2.0.11",
     "@types/passport-local": "^1.0.34",
     "@types/passport-local-mongoose": "^6.1.0",
     "@typescript-eslint/eslint-plugin": "^5.10.1",
