--- a/frontend/package.json
+++ b/frontend/package.json
@@ -34,6 +34,7 @@
     "@nuxt/typescript-build": "^2.1.0",
     "@nuxtjs/eslint-config-typescript": "^8.0.0",
     "@nuxtjs/eslint-module": "^3.0.2",
+    "@nuxtjs/style-resources": "^1.2.1",
     "@types/youtube-player": "^5.5.5",
     "eslint": "^8.8.0",
     "eslint-plugin-nuxt": "^3.1.0",
