--- a/spec/pages.yml
+++ b/spec/pages.yml
@@ -1,10 +1,10 @@
 - /index # Description about YTCC
 
-- /video/:video_id # video edit page
+- /video/:videoId # video edit page
 
 - /me # my author page
 
-- /author/:author_id # other author page
+- /author/:authorId # other author page
 
 - /register
 
