--- a/backend/package.json
+++ b/backend/package.json
@@ -6,6 +6,7 @@
     "dotenv": "^14.3.2",
     "express": "^4.17.2",
     "express-session": "^1.17.2",
+    "https": "^1.0.0",
     "mongoose": "^6.1.8",
     "passport": "^0.5.2",
     "passport-google-oauth20": "^2.0.0",
