--- a/backend/package.json
+++ b/backend/package.json
@@ -33,7 +33,8 @@
     "typescript": "^4.5.5"
   },
   "scripts": {
-    "dev": "ts-node-dev -r tsconfig-paths/register src/server.ts"
+    "dev": "ts-node-dev -r tsconfig-paths/register src/server.ts",
+    "lint": "eslint --ext \".js,.ts\""
   },
   "name": "ytcc-backend",
   "version": "1.0.0",
