--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,10 +7,7 @@
     "build": "nuxt build",
     "start": "nuxt start",
     "generate": "nuxt generate",
-    "lint:js": "eslint --ext \".js,.ts,.vue\" --ignore-path .gitignore .",
-    "lint:prettier": "prettier --check .",
-    "lint": "yarn lint:js && yarn lint:prettier",
-    "lintfix": "prettier --write --list-different . && yarn lint:js --fix"
+    "lint": "eslint --ext \".js,.ts,.vue\""
   },
   "dependencies": {
     "@nuxtjs/axios": "^5.13.6",
