--- a/backend/.eslintrc.json
+++ b/backend/.eslintrc.json
@@ -2,8 +2,11 @@
   "env": {
     "node": true,
     "es2021": true
-  },
-  "extends": ["eslint:recommended", "plugin:@typescript-eslint/recommended"],
+  },  "extends": [
+    "eslint:recommended",
+    "plugin:@typescript-eslint/recommended",
+    "plugin:eqeqeq-fix/recommended"
+  ],
   "parser": "@typescript-eslint/parser",
   "parserOptions": {
     "ecmaVersion": 12,
