--- a/backend/package.json
+++ b/backend/package.json
@@ -28,13 +28,14 @@
     "@typescript-eslint/eslint-plugin": "^5.10.1",
     "@typescript-eslint/parser": "^5.10.1",
     "eslint": "^8.8.0",
+    "eslint-plugin-eqeqeq-fix": "^1.0.3",
     "ts-node-dev": "^1.1.8",
     "tsconfig-paths": "^3.12.0",
     "typescript": "^4.5.5"
   },
   "scripts": {
     "dev": "ts-node-dev -r tsconfig-paths/register src/server.ts",
-    "lint": "eslint --ext \".js,.ts\""
+    "lint": "eslint --fix --ext \".js,.ts\" src/"
   },
   "name": "ytcc-backend",
   "version": "1.0.0",
