--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,7 +7,7 @@
     "build": "nuxt build",
     "start": "nuxt start",
     "generate": "nuxt generate",
-    "lint": "eslint --ext \".js,.ts,.vue\""
+    "lint": "eslint --ext \".js,.ts,.vue\" components/ middleware/ pages/ plugins/ routes/ store/ util/ declare.d.ts nuxt.config.js"
   },
   "dependencies": {
     "@nuxtjs/axios": "^5.13.6",
@@ -35,6 +35,7 @@
     "@nuxtjs/style-resources": "^1.2.1",
     "@types/youtube-player": "^5.5.5",
     "eslint": "^8.8.0",
+    "eslint-plugin-eqeqeq-fix": "^1.0.3",
     "eslint-plugin-nuxt": "^3.1.0",
     "eslint-plugin-vue": "^8.2.0"
   }
