--- a/frontend/.eslintrc.json
+++ b/frontend/.eslintrc.json
@@ -18,18 +18,17 @@
   ],
   "plugins": ["@typescript-eslint"],
   "rules": {
-    "indent": ["off", 2],
+    "indent": ["warn", 2],
     "semi": ["warn", "never"],
     "quotes": ["warn", "single"],
     "comma-dangle": ["warn", "always-multiline"],
-    "@typescript-eslint/no-unused-vars": ["warn", { "argsIgnorePattern": "^_" }],
     "arrow-parens": ["warn", "as-needed"],
     "brace-style": ["warn", "1tbs", { "allowSingleLine": true }],
-    "curly": ["warn", "multi"],
+    "curly": ["warn", "multi-or-nest"],
     "multiline-ternary": ["off"],
     "no-multiple-empty-lines": ["off"],
     "space-before-function-paren": ["warn", "never"],
-    "object-curly-spacing": ["warn", "always"],
+    "object-curly-spacing": "off",
     "eol-last": ["warn", "always"],
     "object-shorthand": ["warn", "always"],
     "eqeqeq": ["warn", "always"],
@@ -38,9 +37,20 @@
     "keyword-spacing": ["warn"],
     "arrow-spacing": ["warn"],
     "key-spacing": ["warn", { "mode": "minimum" }],
-    "@typescript-eslint/type-annotation-spacing": ["warn"],
     "comma-spacing": ["warn"],
     "no-trailing-spaces": ["warn"],
+    "@typescript-eslint/type-annotation-spacing": ["warn"],
+    "@typescript-eslint/no-unused-vars": ["warn", { "argsIgnorePattern": "^_" }],
+    "@typescript-eslint/member-delimiter-style": ["warn", {
+      "multiline": {
+        "delimiter": "none"
+      },
+      "singleline": {
+        "delimiter": "comma",
+        "requireLast": false
+      }
+    }],
+    "@typescript-eslint/object-curly-spacing": ["warn", "always"],
     "vue/multi-word-component-names": ["off"]
   }
 }
